# RogueLike

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  format.yml
source/: CMakeLists.txt  Entities.h  Game.cpp  Game.h  GameLoop.cpp  Window.cpp  Window.h  logo.h  main.cpp
source/core/: CMakeLists.txt  Game.cpp  Game.h  GameLoop.cpp
source/test/: CMakeLists.txt
